fix spacing

--- a/app/assets/stylesheets/achievements.scss
+++ b/app/assets/stylesheets/achievements.scss
@@ -13,7 +13,7 @@ form.achievement-search {
 .cancel-completion {
   display: inline-block;
   font-size: 1.5rem;
-  margin-right: 1.0rem;
+  margin-right: 0.5rem;
 }
 
 .task-completed-on {
